--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "liqd-ql",
   "description": "Query Language library",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "author": "radixxko",
   "license": "MIT",
   "main": "lib/ql.js",
@@ -22,11 +22,11 @@
     "liqd"
   ],
   "devDependencies": {
-    "coveralls": "^3.0.0",
+    "coveralls": "^3.0.9",
+    "liqd-sql": "^1.6.0",
     "mocha": "^5.0.4",
-    "nyc": "^11.6.0",
-    "liqd-sql": "^1.5.3",
-    "mysql": "^2.17.1"
+    "mysql": "^2.18.1",
+    "nyc": "^11.6.0"
   },
   "dependencies": {
     "liqd-parser": "^1.3.0"
